test/fixtures/validate/bad/meta-not-first.js
const setup = 1;
export const meta = {
  name: "meta-not-first",
  description: "meta is present but not the first statement -> rejected.",
  phases: [],
};
agent("noop");
